<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/theme" />

    <TextView
        android:id="@+id/themeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/notificationSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/notifications" />

    <TextView
        android:id="@+id/notificationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/logout_Text" />


</LinearLayout>