<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="home">Home</string>
    <string name="greetings_template">Hello, %s! How are you doing today?</string>
</resources>