<resources>
    <string name="app_name">PoC</string>
    <string name="title_feature_auth">Authentication</string>
    <string name="title_feature_home">Home</string>
    <string name="title_feature_search">Search</string>
    <string name="title_feature_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_feature_localserver">Local offline server</string>
</resources>