<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="auth">Auth</string>
    <string name="auth_pin_code">Pin Code</string>
    <string name="error_authentication_unknown">Something weird went wrong while authentication. Sorry, our bad. Try later.</string>
    <string name="error_authentication_password_short">Ops… The password is too short, it needs to be at least 8 characters long.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
</resources>